--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>jp.ac.aiit.pbl</groupId>
   <artifactId>cewsm-sdk</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.9.0</version>
 
   <name>cewsm-sdk</name>
   <!-- FIXME change it to the project's website -->
